Enhance image capture and streaming quality. Updated motion delay and added capture settings in docker-compose. Improved FFmpeg settings for high-quality still images. Implemented modal for image enlargement in the frontend and added sharpness measurement in the capture service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,10 @@ services:
       - MOTION_THRESHOLD=50
       - MOTION_MIN_AREA=3000
       - MOTION_COOLDOWN=5.0
-      - MOTION_DELAY=0.5
+      - MOTION_DELAY=1.5
+      - CAPTURE_SAMPLES=5
+      - CAPTURE_SAMPLE_INTERVAL=0.1
+      - JPEG_QUALITY=95
       - MOTION_MOG2_VAR_THRESHOLD=35
       - MOTION_BINARY_THRESHOLD=175
       - CAPTURE_HTTP_PORT=8080
